--- a/Movies_player/Movies_player/MainWindow.xaml
+++ b/Movies_player/Movies_player/MainWindow.xaml
@@ -6,11 +6,11 @@
         xmlns:local="clr-namespace:Movies_player"
         mc:Ignorable="d"
         Title="Movie Player" Height="450" Width="800" ResizeMode="NoResize">
-    <Grid Background="Black" Margin="10,0,0,0">
+    <Grid Background="Black">
         <WrapPanel Background="Black">
             <Label Background="Black" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="800" Margin="0,0,0,10" >Movie Player</Label>
             <StackPanel Orientation="Horizontal" Width="800" >
-                <TextBox Background="Black" BorderBrush="White"  Width="670" Height="30">Open mp3 file</TextBox>
+                <TextBox Background="Black" BorderBrush="White"  Width="668" Height="30">Open mp3 file</TextBox>
                 <Button BorderBrush="#FF00FF10" Background="Black" Foreground="White"  Width="80" Margin="10,0,0,0">...</Button>
             </StackPanel>
             <StackPanel Margin="0,0,0,10">
