--- a/Movies_player/Movies_player/MainWindow.xaml
+++ b/Movies_player/Movies_player/MainWindow.xaml
@@ -6,56 +6,46 @@
         xmlns:local="clr-namespace:Movies_player"
         mc:Ignorable="d"
         Title="Movie Player" Height="450" Width="800" ResizeMode="NoResize">
+
+
     <Grid Background="Black">
-        <WrapPanel Background="Black">
-            <Label Background="Black" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="800" Margin="0,0,0,10" >Movie Player</Label>
-            <StackPanel Orientation="Horizontal" Width="800" >
-                <TextBox Background="Black" BorderBrush="White"  Width="668" Height="30">Open mp3 file</TextBox>
-                <Button BorderBrush="#FF00FF10" Background="Black" Foreground="White"  Width="80" Margin="10,0,0,0">...</Button>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Label Content="Movie Player" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="0" Margin="0,10,0,10"/>
+
+        <Grid x:Name="grid" Grid.Row="1" Background="Black">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBox x:Name="OpenText" Background="Black" BorderBrush="White" Foreground="White" Grid.Column="0" Grid.Row="0" Margin="10,10,125,10" Text="Open mp3 file" Grid.ColumnSpan="3"/>
+            <Button x:Name="Open" Content="..." BorderBrush="White" Background="Black" Foreground="White" Grid.Column="2" Grid.Row="0" Margin="120,10,10,0" Height="20" VerticalAlignment="Top" Click="ButtonOpen_Click"/>
+
+            <ProgressBar x:Name="barProgress" Foreground="#FF00B31B" Grid.Row="1" Grid.ColumnSpan="3" Margin="10,10,10,238"/>
+
+            <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" Margin="0,174,0,114" Grid.Column="1" RenderTransformOrigin="0.501,0.514">
+                <Button x:Name="pauseButton" Content="Pause" Foreground="White" Background="Black" Width="100" Margin="0,0,10,0" Click="pauseButton_Click"/>
+                <Button x:Name="stopButton" Content="Stop" Foreground="White" Background="Black" Width="100" Click="stopButton_Click"/>
+                <Button x:Name="playButton" Content="Play" Foreground="White" Background="Black" Width="100" Click="playButton_Click"/>
             </StackPanel>
-            <StackPanel Margin="0,0,0,10">
-                <ProgressBar Height="50" Width="760" Margin="0,10,0,0"></ProgressBar>
+
+            <Slider x:Name="barVolume" Foreground="White" Grid.Row="1" Margin="10,134,0,174" ValueChanged="barVolume_ValueChanged" />
+
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="162,134,10,198" Grid.Column="2">
+                <TextBlock x:Name="progressTime" Foreground="White" Text="02:24"/>
+                <TextBlock  Foreground="White" Text=" / "/>
+                <TextBlock x:Name="timeTotal" Foreground="White" Text="10:23"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Grid  ShowGridLines="False" Width="756" Height="200" VerticalAlignment="Center">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-
-                    <StackPanel x:Name="StackDeroulement" Orientation="Horizontal" Grid.Column="2" RenderTransformOrigin="1.132,0.485" Height="33" HorizontalAlignment="Right">
-                        <TextBox HorizontalAlignment="Center" VerticalAlignment="Center">02:24</TextBox>
-                        <TextBox HorizontalAlignment="Center" VerticalAlignment="Center">/</TextBox>
-                        <TextBox HorizontalAlignment="Center" VerticalAlignment="Center">10:23</TextBox>
-                    </StackPanel>
-
-                    <StackPanel Grid.Row="1" Orientation="Horizontal" Grid.Column="1" Margin="10,32,0,40" HorizontalAlignment="Right">
-                        <Button HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
-                            <Button.RenderTransform>
-                                <TransformGroup>
-                                    <ScaleTransform/>
-                                    <SkewTransform/>
-                                    <RotateTransform Angle="0.395"/>
-                                    <TranslateTransform/>
-                                </TransformGroup>
-                            </Button.RenderTransform> Play
-                        </Button>
-                        <Button Margin="2,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" >Pause</Button>
-                        <Button Margin="2,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" >Stop</Button>
-                    </StackPanel>
-
-                    <StackPanel x:Name="sliderPanel" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="2" Margin="0,32,0,40" Width="80">
-                        <Slider Width="96"  Height="64" />
-                    </StackPanel>
-
-
-                </Grid>
-            </StackPanel>
-        </WrapPanel>
+        </Grid>
     </Grid>
 </Window>
